# .files

./: .gitconfig  .rpmmacros  .zshrc  README.md  install.sh  meson.build  settings.json  vsc-extensions.txt
